fixed command order

--- a/tng.yml
+++ b/tng.yml
@@ -7,11 +7,11 @@ topology:
     srl1:
       kind: nokia_srlinux
       image: ghcr.io/nokia/srlinux:23.10.1
-      startup-config: srl1.cfg
+#      startup-config: srl1.cfg
     srl2:
       kind: nokia_srlinux
       image: ghcr.io/nokia/srlinux:23.10.1
-      startup-config: srl2.cfg
+#      startup-config: srl2.cfg
 
   links:
     - endpoints: ["srl1:e1-1", "srl2:e1-1"]
